// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiControlBar is rendered 1`] = `
Array [
  <section
    aria-label="aria-label"
    class="euiControlBar testClass1 testClass2 euiControlBar--large euiControlBar--fixed"
    data-test-subj="test subject string"
    style="left:0;right:0"
  >
    <h2
      class="emotion-euiScreenReaderOnly"
    >
      Page level controls
    </h2>
    <div
      class="euiControlBar__controls"
    >
      <nav
        aria-label="Breadcrumbs"
        class="euiBreadcrumbs euiControlBar__breadcrumbs euiBreadcrumbs--truncate"
      >
        <ol
          class="euiBreadcrumbs__list"
        >
          <li
            class="euiBreadcrumb"
          >
            <span
              class="euiBreadcrumb__content"
            >
              src
            </span>
          </li>
          <li
            class="euiBreadcrumb euiBreadcrumb--last"
          >
            <span
              aria-current="page"
              class="euiBreadcrumb__content"
            >
              components
            </span>
          </li>
        </ol>
      </nav>
      <button
        class="euiButton euiButton--ghost euiButton--small euiControlBar__button"
        data-test-subj="dts"
        type="button"
      >
        <span
          class="euiButtonContent euiButton__content"
        >
          <span
            class="euiButton__text"
          >
            Sound the Alarm
          </span>
        </span>
      </button>
      <div
        class="euiControlBar__text"
      >
        Close the Hatch
      </div>
      <div
        class="euiControlBar__divider"
      />
      <span
        class="euiControlBar__icon"
        color="danger"
        data-euiicon-type="alert"
      >
        Sample Icon
      </span>
      <div
        class="euiControlBar__spacer"
      />
      <button
        class="euiControlBar__tab"
      >
        Flight 815
      </button>
    </div>
  </section>,
  <p
    aria-live="assertive"
    class="emotion-euiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;

exports[`EuiControlBar props leftOffset is rendered 1`] = `
Array [
  <section
    aria-label="Page level controls"
    class="euiControlBar euiControlBar--large euiControlBar--fixed"
    style="left:200px;right:0"
  >
    <h2
      class="emotion-euiScreenReaderOnly"
    >
      Page level controls
    </h2>
    <div
      class="euiControlBar__controls"
    >
      <nav
        aria-label="Breadcrumbs"
        class="euiBreadcrumbs euiControlBar__breadcrumbs euiBreadcrumbs--truncate"
      >
        <ol
          class="euiBreadcrumbs__list"
        >
          <li
            class="euiBreadcrumb"
          >
            <span
              class="euiBreadcrumb__content"
            >
              src
            </span>
          </li>
          <li
            class="euiBreadcrumb euiBreadcrumb--last"
          >
            <span
              aria-current="page"
              class="euiBreadcrumb__content"
            >
              components
            </span>
          </li>
        </ol>
      </nav>
      <button
        class="euiButton euiButton--ghost euiButton--small euiControlBar__button"
        data-test-subj="dts"
        type="button"
      >
        <span
          class="euiButtonContent euiButton__content"
        >
          <span
            class="euiButton__text"
          >
            Sound the Alarm
          </span>
        </span>
      </button>
      <div
        class="euiControlBar__text"
      >
        Close the Hatch
      </div>
      <div
        class="euiControlBar__divider"
      />
      <span
        class="euiControlBar__icon"
        color="danger"
        data-euiicon-type="alert"
      >
        Sample Icon
      </span>
      <div
        class="euiControlBar__spacer"
      />
      <button
        class="euiControlBar__tab"
      >
        Flight 815
      </button>
    </div>
  </section>,
  <p
    aria-live="assertive"
    class="emotion-euiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;

exports[`EuiControlBar props maxHeight is rendered 1`] = `
Array [
  <section
    aria-label="Page level controls"
    class="euiControlBar euiControlBar--large euiControlBar--fixed"
    style="left:0;right:0;max-height:20rem"
  >
    <h2
      class="emotion-euiScreenReaderOnly"
    >
      Page level controls
    </h2>
    <div
      class="euiControlBar__controls"
    >
      <nav
        aria-label="Breadcrumbs"
        class="euiBreadcrumbs euiControlBar__breadcrumbs euiBreadcrumbs--truncate"
      >
        <ol
          class="euiBreadcrumbs__list"
        >
          <li
            class="euiBreadcrumb"
          >
            <span
              class="euiBreadcrumb__content"
            >
              src
            </span>
          </li>
          <li
            class="euiBreadcrumb euiBreadcrumb--last"
          >
            <span
              aria-current="page"
              class="euiBreadcrumb__content"
            >
              components
            </span>
          </li>
        </ol>
      </nav>
      <button
        class="euiButton euiButton--ghost euiButton--small euiControlBar__button"
        data-test-subj="dts"
        type="button"
      >
        <span
          class="euiButtonContent euiButton__content"
        >
          <span
            class="euiButton__text"
          >
            Sound the Alarm
          </span>
        </span>
      </button>
      <div
        class="euiControlBar__text"
      >
        Close the Hatch
      </div>
      <div
        class="euiControlBar__divider"
      />
      <span
        class="euiControlBar__icon"
        color="danger"
        data-euiicon-type="alert"
      >
        Sample Icon
      </span>
      <div
        class="euiControlBar__spacer"
      />
      <button
        class="euiControlBar__tab"
      >
        Flight 815
      </button>
    </div>
  </section>,
  <p
    aria-live="assertive"
    class="emotion-euiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;

exports[`EuiControlBar props mobile is rendered 1`] = `
Array [
  <section
    aria-label="Page level controls"
    class="euiControlBar euiControlBar--large euiControlBar--fixed euiControlBar--showOnMobile"
    style="left:0;right:0"
  >
    <h2
      class="emotion-euiScreenReaderOnly"
    >
      Page level controls
    </h2>
    <div
      class="euiControlBar__controls"
    >
      <nav
        aria-label="Breadcrumbs"
        class="euiBreadcrumbs euiControlBar__breadcrumbs euiBreadcrumbs--truncate"
      >
        <ol
          class="euiBreadcrumbs__list"
        >
          <li
            class="euiBreadcrumb"
          >
            <span
              class="euiBreadcrumb__content"
            >
              src
            </span>
          </li>
          <li
            class="euiBreadcrumb euiBreadcrumb--last"
          >
            <span
              aria-current="page"
              class="euiBreadcrumb__content"
            >
              components
            </span>
          </li>
        </ol>
      </nav>
      <button
        class="euiButton euiButton--ghost euiButton--small euiControlBar__button"
        data-test-subj="dts"
        type="button"
      >
        <span
          class="euiButtonContent euiButton__content"
        >
          <span
            class="euiButton__text"
          >
            Sound the Alarm
          </span>
        </span>
      </button>
      <div
        class="euiControlBar__text"
      >
        Close the Hatch
      </div>
      <div
        class="euiControlBar__divider"
      />
      <span
        class="euiControlBar__icon"
        color="danger"
        data-euiicon-type="alert"
      >
        Sample Icon
      </span>
      <div
        class="euiControlBar__spacer"
      />
      <button
        class="euiControlBar__tab"
      >
        Flight 815
      </button>
    </div>
  </section>,
  <p
    aria-live="assertive"
    class="emotion-euiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;

exports[`EuiControlBar props position is rendered 1`] = `
<section
  aria-label="Page level controls"
  class="euiControlBar euiControlBar--large euiControlBar--absolute"
  style="left:0;right:0"
>
  <h2
    class="emotion-euiScreenReaderOnly"
  >
    Page level controls
  </h2>
  <div
    class="euiControlBar__controls"
  >
    <nav
      aria-label="Breadcrumbs"
      class="euiBreadcrumbs euiControlBar__breadcrumbs euiBreadcrumbs--truncate"
    >
      <ol
        class="euiBreadcrumbs__list"
      >
        <li
          class="euiBreadcrumb"
        >
          <span
            class="euiBreadcrumb__content"
          >
            src
          </span>
        </li>
        <li
          class="euiBreadcrumb euiBreadcrumb--last"
        >
          <span
            aria-current="page"
            class="euiBreadcrumb__content"
          >
            components
          </span>
        </li>
      </ol>
    </nav>
    <button
      class="euiButton euiButton--ghost euiButton--small euiControlBar__button"
      data-test-subj="dts"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Sound the Alarm
        </span>
      </span>
    </button>
    <div
      class="euiControlBar__text"
    >
      Close the Hatch
    </div>
    <div
      class="euiControlBar__divider"
    />
    <span
      class="euiControlBar__icon"
      color="danger"
      data-euiicon-type="alert"
    >
      Sample Icon
    </span>
    <div
      class="euiControlBar__spacer"
    />
    <button
      class="euiControlBar__tab"
    >
      Flight 815
    </button>
  </div>
</section>
`;

exports[`EuiControlBar props rightOffset is rendered 1`] = `
Array [
  <section
    aria-label="Page level controls"
    class="euiControlBar euiControlBar--large euiControlBar--fixed"
    style="left:0;right:200px"
  >
    <h2
      class="emotion-euiScreenReaderOnly"
    >
      Page level controls
    </h2>
    <div
      class="euiControlBar__controls"
    >
      <nav
        aria-label="Breadcrumbs"
        class="euiBreadcrumbs euiControlBar__breadcrumbs euiBreadcrumbs--truncate"
      >
        <ol
          class="euiBreadcrumbs__list"
        >
          <li
            class="euiBreadcrumb"
          >
            <span
              class="euiBreadcrumb__content"
            >
              src
            </span>
          </li>
          <li
            class="euiBreadcrumb euiBreadcrumb--last"
          >
            <span
              aria-current="page"
              class="euiBreadcrumb__content"
            >
              components
            </span>
          </li>
        </ol>
      </nav>
      <button
        class="euiButton euiButton--ghost euiButton--small euiControlBar__button"
        data-test-subj="dts"
        type="button"
      >
        <span
          class="euiButtonContent euiButton__content"
        >
          <span
            class="euiButton__text"
          >
            Sound the Alarm
          </span>
        </span>
      </button>
      <div
        class="euiControlBar__text"
      >
        Close the Hatch
      </div>
      <div
        class="euiControlBar__divider"
      />
      <span
        class="euiControlBar__icon"
        color="danger"
        data-euiicon-type="alert"
      >
        Sample Icon
      </span>
      <div
        class="euiControlBar__spacer"
      />
      <button
        class="euiControlBar__tab"
      >
        Flight 815
      </button>
    </div>
  </section>,
  <p
    aria-live="assertive"
    class="emotion-euiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;

exports[`EuiControlBar props showContent is rendered 1`] = `
Array [
  <section
    aria-label="Page level controls"
    class="euiControlBar euiControlBar-isOpen euiControlBar--large euiControlBar--fixed"
    style="left:0;right:0"
  >
    <h2
      class="emotion-euiScreenReaderOnly"
    >
      Page level controls
    </h2>
    <div
      class="euiControlBar__controls"
    >
      <nav
        aria-label="Breadcrumbs"
        class="euiBreadcrumbs euiControlBar__breadcrumbs euiBreadcrumbs--truncate"
      >
        <ol
          class="euiBreadcrumbs__list"
        >
          <li
            class="euiBreadcrumb"
          >
            <span
              class="euiBreadcrumb__content"
            >
              src
            </span>
          </li>
          <li
            class="euiBreadcrumb euiBreadcrumb--last"
          >
            <span
              aria-current="page"
              class="euiBreadcrumb__content"
            >
              components
            </span>
          </li>
        </ol>
      </nav>
      <button
        class="euiButton euiButton--ghost euiButton--small euiControlBar__button"
        data-test-subj="dts"
        type="button"
      >
        <span
          class="euiButtonContent euiButton__content"
        >
          <span
            class="euiButton__text"
          >
            Sound the Alarm
          </span>
        </span>
      </button>
      <div
        class="euiControlBar__text"
      >
        Close the Hatch
      </div>
      <div
        class="euiControlBar__divider"
      />
      <span
        class="euiControlBar__icon"
        color="danger"
        data-euiicon-type="alert"
      >
        Sample Icon
      </span>
      <div
        class="euiControlBar__spacer"
      />
      <button
        class="euiControlBar__tab"
      >
        Flight 815
      </button>
    </div>
    <div
      class="euiControlBar__content"
    >
      Content
    </div>
  </section>,
  <p
    aria-live="assertive"
    class="emotion-euiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;

exports[`EuiControlBar props size is rendered 1`] = `
Array [
  <section
    aria-label="Page level controls"
    class="euiControlBar euiControlBar--small euiControlBar--fixed"
    style="left:0;right:0"
  >
    <h2
      class="emotion-euiScreenReaderOnly"
    >
      Page level controls
    </h2>
    <div
      class="euiControlBar__controls"
    >
      <nav
        aria-label="Breadcrumbs"
        class="euiBreadcrumbs euiControlBar__breadcrumbs euiBreadcrumbs--truncate"
      >
        <ol
          class="euiBreadcrumbs__list"
        >
          <li
            class="euiBreadcrumb"
          >
            <span
              class="euiBreadcrumb__content"
            >
              src
            </span>
          </li>
          <li
            class="euiBreadcrumb euiBreadcrumb--last"
          >
            <span
              aria-current="page"
              class="euiBreadcrumb__content"
            >
              components
            </span>
          </li>
        </ol>
      </nav>
      <button
        class="euiButton euiButton--ghost euiButton--small euiControlBar__button"
        data-test-subj="dts"
        type="button"
      >
        <span
          class="euiButtonContent euiButton__content"
        >
          <span
            class="euiButton__text"
          >
            Sound the Alarm
          </span>
        </span>
      </button>
      <div
        class="euiControlBar__text"
      >
        Close the Hatch
      </div>
      <div
        class="euiControlBar__divider"
      />
      <span
        class="euiControlBar__icon"
        color="danger"
        data-euiicon-type="alert"
      >
        Sample Icon
      </span>
      <div
        class="euiControlBar__spacer"
      />
      <button
        class="euiControlBar__tab"
      >
        Flight 815
      </button>
    </div>
  </section>,
  <p
    aria-live="assertive"
    class="emotion-euiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;
